--- a/public/success.html
+++ b/public/success.html
@@ -66,6 +66,11 @@
     @media (max-width: 900px) {
       .results-wrapper {
         flex-direction: column;
+        width: 100%;
+      }
+      .card {
+        min-width: unset;
+        max-width: unset;
       }
     }
   </style>
@@ -91,24 +96,32 @@
   </div>
 
   <script>
-    function getQueryParams() {
+    // Récupère la réponse dans l’URL (query params)
+    function getResponseFromUrl() {
       const urlParams = new URLSearchParams(window.location.search);
-      if (urlParams.has("data")) {
-        try { return JSON.parse(decodeURIComponent(urlParams.get("data"))); }
-        catch { return {}; }
+      const result = {};
+      for (const [k, v] of urlParams.entries()) {
+        result[k] = v;
       }
-      const params = {};
-      for (const [k, v] of urlParams.entries()) params[k] = v;
-      return params;
+      return result;
     }
 
-    document.addEventListener("DOMContentLoaded", () => {
-      const data = getQueryParams();
-      const requestSent = data.requestSent || {};
-      const response    = data.response || data;
+    document.addEventListener("DOMContentLoaded", async () => {
+      let requestSent = {};
+      try {
+        const resp = await fetch("/lastPayment");
+        if (resp.ok) {
+          const data = await resp.json();
+          requestSent = data.requestSent || {};
+        }
+      } catch (err) {
+        console.error("Impossible de récupérer la requête:", err);
+      }
 
-      const statusBlock = document.getElementById("status-block");
-      const requestBlock = document.getElementById("request-block");
+      const response = getResponseFromUrl();
+
+      const statusBlock   = document.getElementById("status-block");
+      const requestBlock  = document.getElementById("request-block");
       const responseBlock = document.getElementById("response-block");
 
       const success = response.EXECCODE === "0000";
@@ -119,7 +132,7 @@
         </h2>
       `;
 
-      requestBlock.textContent = JSON.stringify(requestSent, null, 2);
+      requestBlock.textContent  = JSON.stringify(requestSent, null, 2);
       responseBlock.textContent = JSON.stringify(response, null, 2);
     });
   </script>
