--- a/public/hostedFields.html
+++ b/public/hostedFields.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
+  <header id="main-header">
   <!-- Sélecteur de thème -->
   <div class="theme-switch-wrapper">
     <span class="theme-label">Light Mode </span>
@@ -23,7 +25,7 @@
     <a href="index.html" class="back-home-btn">← Home page</a>
     <button id="open-test-cards" class="primary">Click here to display test cards</button>
   </div>
-
+  </header>
   <div id="payment-wrapper" style="justify-content:center;gap:40px;">
 
     <!-- FORMULAIRE Paiement -->
