--- a/public/hostedforms.html
+++ b/public/hostedforms.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
+  <header id="main-header">
   <div class="theme-switch-wrapper">
     <span class="theme-label">Light Mode </span>
     <label class="theme-switch" for="theme-toggle">
@@ -20,7 +22,7 @@
     <a href="index.html" class="back-home-btn">← Home page</a>
     <button id="open-test-cards" class="primary">Click here to display test cards</button>
   </div>
-
+  </header>
   <div id="payment-wrapper">
     <!-- PANEL Environnements -->
     <div id="env-panel" class="panel">
