feat: extra params

--- a/public/s2s.html
+++ b/public/s2s.html
@@ -26,8 +26,10 @@
 
   <div id="payment-wrapper">
     <!-- ======= Bloc Use-cases ======= -->
-    <div id="use-cases-panel" class="panel"></div>
-
+     <div id="extra-params-panel">
+      <div id="use-cases-panel" class="panel"></div>
+      <div id="extra-params-panel"></div>
+      </div>
     <!-- ======= FORMULAIRE S2S ======= -->
     <form id="s2s-form" class="panel">
       <h3>Paiement S2S</h3>
@@ -124,8 +126,10 @@
   <!-- ======= Scripts ======= -->
   <script src="env-manager.js"></script>
   <script src="use-case-selection.js"></script>
+  <script src="extra-params.js"></script>
   <script src="script.js"></script>
   <script src="test-cards.js"></script>
+  
 
   <script>
   // URLs de redirection
